year range for stats data /year-range endpoint added
